--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* body {
   background-color: #4e6a54;
   overflow-x: hidden;
-}
+} */
